--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -54,10 +54,9 @@
 
 .btn-simplify {
   background-color: $VeryLightGray;
-  color: $DarkBlue;
+  color: $BrightRed;
 }
 
 .btn-simplify:hover {
-  background-color: $BrightRed;
-  color: $VeryLightGray;
+  background-color: $VeryPaleRed;
 }
