--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -129,7 +129,7 @@
     $BrightRed;
 
   @include respond(tab-port) {
-    margin-top: 10rem;
+    margin-top: 5rem;
     padding: 0;
     flex-direction: column;
     align-items: center;
